tests/ui/parser/misspelled-keywords/while-without-identifiers.rs
fn main() {
    whilee 2 > 1 {}
    //~^ ERROR expected one of
}
